--- a/config/database.yml
+++ b/config/database.yml
@@ -1,11 +1,11 @@
 # SQLite version 3.x
-#   gem install psql
+#   gem install postgresql
 #
 #   Ensure the SQLite 3 gem is defined in your Gemfile
-#   gem 'psql'
+#   gem 'postgresql'
 development:
-  adapter: psql
-  database: db/development.psql
+  adapter: postgresql
+  database: development_postgresql
   pool: 5
   timeout: 5000
 
@@ -13,13 +13,13 @@ development:
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
-  adapter: psql
-  database: db/test.psql
+  adapter: postgresql
+  database: test_postgresql
   pool: 5
   timeout: 5000
 
 production:
-  adapter: psql
-  database: db/production.psql
+  adapter: postgresql
+  database: production_postgresql
   pool: 5
   timeout: 5000
