--- a/config/database.yml
+++ b/config/database.yml
@@ -5,21 +5,21 @@
 #   gem 'postgresql'
 development:
   adapter: postgresql
-  database: development_postgresql
+  database: fisi_dev
   pool: 5
   timeout: 5000
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
-test:
-  adapter: postgresql
-  database: test_postgresql
-  pool: 5
-  timeout: 5000
+# test:
+#   adapter: postgresql
+#   database: fisi_test
+#   pool: 5
+#   timeout: 5000
 
 production:
   adapter: postgresql
-  database: production_postgresql
+  database: fisi_prod
   pool: 5
   timeout: 5000
